<?xml version="1.0"?>
<package>
  <name>sensor_startup</name>
  <version>0.0.0</version>
  <description>The sensor_startup package</description>

  <maintainer email="glh@todo.todo">glh</maintainer>

  <license>CLOSED</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>serial</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>serial</run_depend>

</package>
